--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,24 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+soroban-sdk = "0.6"
+
+[dev-dependencies]
+soroban-sdk = { version = "0.6", features = ["testutils"] }
+
+[features]
+testutils = ["soroban-sdk/testutils"]
+
+[profile.release]
+opt-level = "z"
+overflow-checks = true
+debug = 0
+strip = "symbols"
+debug-assertions = false
+panic = "abort"
+codegen-units = 1
+lto = true
+
+[profile.release-with-logs]
+inherits = "release"
+debug-assertions = true
